--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Smart Campus Platform" />
-    <title>Smart Campus Platform</title>
+    <meta name="description" content="Smart Campus" />
+    <title>Smart Campus</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
